调整 MainMenuScreen 副标题间距